# littlelambda

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  littlelambda.cpp  littlelambda.h  mini-gmp.c  test.cpp  test.ll
.github/workflows/: cmake-multi-platform.yml  codeql.yml
src/: CMakeLists.txt  lam_common.cpp  lam_common.h  lam_core.cpp  lam_core.h  littlelambda.cpp  littlelambda.h  test.cpp  ugc.cpp
test/: 01-Basic.ll  CMakeLists.txt  codepoint.ll  math.ll  module.ll  test.cpp  test.ll
